--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,22 @@
 @import 'tailwindcss';
+@import '../styles/colors.css';
+@import '../styles/typography.css';
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('http://static.dev-oops.kr/fonts/PretendardVariable.woff2') format('woff2-variations');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #14151a;
+  --foreground: #ffffff;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
+html {
+  font-family: var(--font-pretendard);
+  background-color: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
