--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('http://static.dev-oops.kr/fonts/PretendardVariable.woff2') format('woff2-variations');
+  src: url('https://static.dev-oops.kr/fonts/PretendardVariable.woff2') format('woff2-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
