feat: `ProfileModal` 컴포넌트 제작
* dimmed 영역 click시 modal이 닫히도록 제작

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -66,4 +66,7 @@
   /* Outline Colors */
   --color-outline: var(--color-dark-grey-200);
   --color-outline-variant: var(--color-dark-grey-100);
+
+  /* Box Shadow Colors */
+  --shadow-modal: 0px 12px 50px 0px rgba(0, 0, 0, 0.5);
 }
