refactor: 폰트 관리 방식 변경
* aws 에서 불러오던 방식을 로컬로 변경

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 @import '../styles/tabs.css';
 @import '../styles/spacing.css';
 @import '../styles/z-index.css';
+@import '../assets/fonts/pretendardvariable.css';
 
 :root {
   --background: #0d0e12;
