--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,7 @@ html {
   background: rgba(203, 209, 250, 0.36);
   border-radius: 99px;
 }
+
+.shadow-strong-down {
+  box-shadow: 0px 12px 50px 0px rgba(0, 0, 0, 0.50);
+}
