feat: github 라벨에 대한 컬러 매칭

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -46,6 +46,7 @@
   --color-sub-olive: #ddf34f;
   --color-sub-yellow: #debd6a;
   --color-sub-skyblue: #00ceff;
+  --color-sub-red: #f04452;
 
   /* Primary System Colors */
   --color-primary: var(--color-dark-blue-500);
