--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -71,9 +71,18 @@
   /* Gradient Colors */
   --color-blue-tiny-left: linear-gradient(270deg, #f6f6f9 20%, #adb7fb 88.94%);
   --color-blue-tiny-right: linear-gradient(270deg, #adb7fb 14.14%, #f6f6f9 86.06%);
+  --color-gradient-top-layer: linear-gradient(180deg, rgba(255, 255, 255, 0.04) 0%, rgba(255, 255, 255, 0) 100%);
+  --color-gradient-bottom-layer: linear-gradient(180deg, rgba(15, 16, 22, 0) 0%, #0f1016 100%);
+  --color-gradient-landing-image: radial-gradient(
+    100% 100% at 50% 0%,
+    rgba(96, 116, 247, 0.12) 0%,
+    rgba(96, 139, 247, 0.05) 15%,
+    rgba(96, 139, 247, 0) 100%
+  );
 
-  /* Box Shadow Colors */
+  /* Shadow Colors */
   --shadow-modal: 0px 12px 50px 0px rgba(0, 0, 0, 0.5);
+  --shadow-landing-image: 0px 12px 80px 0px rgba(38, 44, 86, 0.32);
 
   /* Modal Colors */
   --color-modal: #0d0e12;
