feat: ShinyText 제작

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 @import '../styles/tabs.css';
 @import '../styles/spacing.css';
 @import '../styles/z-index.css';
+@import '../styles/animation.css';
 @import '../assets/fonts/pretendardvariable.css';
 
 :root {
