--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -91,6 +91,9 @@
 
   /* GNB Colors */
   --color-gnb: #0d0e12;
+
+  /* Shiny Text Colors */
+  --color-shiny-text: #b5b5b5a4
 }
 
 @utility blue-tiny-left {
